--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <%= user_greetings(current_user) %>
         <%= button_to 'Logout', destroy_user_session_path, method: 'delete', class: "btn btn-secondary btn-m" %>
         <% if current_user.pending? %>
-          </h4> Aguardando aprovação do administrador do sistema <h4>
+          <span> Aguardando aprovação do administrador do sistema. </span>
         <%end %>
       <% else %>
         <%= link_to 'Fazer Login', new_user_session_path %>
