--- a/app/views/promos/edit.html.erb
+++ b/app/views/promos/edit.html.erb
@@ -7,8 +7,7 @@
 </ul>
 <% end %>
 
-<h1> Cadastrar promoção </h1>
-<%= form_with(model: @promo, url: promos_path)  do |f| %>
+<h1> Editar Promoção </h1>
+<%= form_with(model: @promo, url: edit_promo_path) do |f| %>
   <%= render 'form', f: f %>
 <% end %>
-
