--- a/app/views/promos/show.html.erb
+++ b/app/views/promos/show.html.erb
@@ -1,5 +1,7 @@
 <h2> <%= Promo.human_attribute_name(:promo) %>: <%= @promo.name %> </h2>
 <hr>
+<%= link_to 'Editar', edit_promo_path(@promo.id) %>
+<hr>
 <dl>
   <dt><strong><%= Promo.human_attribute_name(:starting_date) %>: </strong><%= I18n.localize(@promo.starting_date) %></dt>
   <dt><strong><%= Promo.human_attribute_name(:ending_date) %>: </strong><%= I18n.localize(@promo.ending_date) %></dt>
