Implementa funcionalidade de edição de um meio de pagamento
Co-authored-by: brunabarbozavieira <bruna.barboza111@gmail.com>

--- a/app/views/payment_methods/edit.html.erb
+++ b/app/views/payment_methods/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Cadastrar Novo Meio de Pagamento </h1>
+<h1> Editar Meio de Pagamento </h1>
 
 <% if @payment_method.errors.any? %>
   <p> Verifique os erros abaixo: </p>
