Movida action de home#registered_users para users#index e adicionada validação simples no admin
Co-authored-by: petragrunheidt <petragrunheidt@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <section>
       <% if admin_signed_in? %>
         <%= user_greetings(current_admin) %>
-        <%= link_to 'Usuários', registered_users_home_index_path %>
+        <%= link_to 'Usuários', users_path %>
         <%= button_to 'Logout', destroy_admin_session_path, method: 'delete', class: "btn btn-secondary btn-m" %>
       <% end %>
     </section>
