Implementa upload e visualização de ícone do meio de pagamento
Co-authored-by: brunabarbozavieira <bruna.barboza111@gmail.com>

--- a/app/views/payment_methods/_form.html.erb
+++ b/app/views/payment_methods/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.select :payment_type, @payment_types %>
   </div>
   <div>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </div>
+  <div>
     <%= f.submit 'Salvar' %>
   </div>
 <% end %>
