--- a/app/views/promos/_form.html.erb
+++ b/app/views/promos/_form.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div>
   <%= f.label :ending_date %>
-  <%= f.text_field :ending_date.strftime("%d/%m/%Y %H:%M"), class: "form-control" %>
+  <%= f.text_field :ending_date, class: "form-control" %>
 </div>
 <div>
   <%= f.label :discount_percentage %>
