ajusta o css do button e link, e a view index
Co-authored-by: ana-borowsky <ana-borowsky@users.noreply.github.com>

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,6 @@
+
+a {
+  color: rgb(239, 239, 239) !important;
+} 
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
