--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -4,14 +4,20 @@
   <%= link_to 'Cadastrar promoção', new_promo_path, class: 'btn btn-primary' %>
   <hr>
 <% end %>
-<% if @promos.any? %>
-  <% @promos.each do |p| %>
-    <ul>
-      <li><h4> <%= Promo.human_attribute_name(:promo) %>: <%=  link_to p.name, promo_path(p.id) %> </h4></li>
-      <strong> <%= Promo.human_attribute_name(:voucher)%>: </strong> <%= p.voucher %> 
-      
-    </ul>
-  <% end %>
-<% else %> 
-  <p>Nenhuma promoção cadastrada.</p>
+
+<% if @promos.present? %>
+    <% @promos.each_slice(3) do |promo| %>
+        <div class="row">
+        <% promo.each do |promo| %>
+            <div class="col-4">
+                <div class="card" style="padding: 3%; width: 26rem; margin-bottom: 5%;">
+                <h3 class="card-title"><%= promo.name %></h3>
+                <p class="card-text btn btn-secondary"><%= link_to promo.voucher, promo_path(promo.id)%><p>
+                </div>
+            </div>
+        <% end %>
+        </div> 
+    <% end %>
+<% else %>
+    <h3>Nenhuma promoção cadastrada</h3>
 <% end %>
