modifica os usuários dos testes de admin para user Co-authored-by: ana-borowsky <ana-borowsky@users.noreply.github.com>

--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,6 +1,6 @@
 <h2> Promoções </h2>
 <hr>
-<% if admin_signed_in? %>
+<% if user_signed_in? %>
   <%= link_to 'Cadastrar promoção', new_promo_path, class: 'btn btn-primary' %>
   <hr>
 <% end %>
