Ajusta as rotas e o form de promo conforme review o-authored-by: ana-borowsky <ana-borowsky@users.noreply.github.com>

--- a/app/views/promos/new.html.erb
+++ b/app/views/promos/new.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <h1> Cadastrar promoção </h1>
-<%= form_with(model: @promo, url: promos_path)  do |f| %>
+<%= form_with(model: @promo)  do |f| %>
   <%= render 'form', f: f %>
 <% end %>
 
