--- a/app/views/promos/edit.html.erb
+++ b/app/views/promos/edit.html.erb
@@ -8,6 +8,6 @@
 <% end %>
 
 <h1> Editar Promoção </h1>
-<%= form_with(model: @promo, url: promo_path(@promo.id)) do |f| %>
+<%= form_with(model: @promo) do |f| %>
   <%= render 'form', f: f %>
 <% end %>
