--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,5 +2,17 @@
 a {
   color: rgb(118, 148, 255) !important;
 } 
+$white: #ffffff;
+
+$theme-colors: (
+"light": #a6dbe3,
+"dark": #02665a,
+"primary": #f184c7,
+"secondary": #f8c1d3,
+"info": #e1c6f7,
+"success": #2acc8f,
+"warning": #e0596f,
+"danger": #f24511,
+); 
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
