altera bootstrap das telas de login de usuários
Co-authored-by: ana-borowsky <anavonborowsky@gmail.com>
Co-authored-by: minccia <lusyva.pro@gmail.com>
Co-authored-by: thaisantero <thais.antero@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
         <p class="alert alert-danger"><%= alert %></p>
         <% end %>
       </div>
-      <div class="container">
+      <div class="container-flex mx-auto px-3 rounded"  style="padding: 2%; width: 98%;">
         <%= yield %>
       </div>
     </main>
