--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Criar Conta", new_registration_path(resource_name) %><br />
+  <%= link_to "Criar Conta", new_registration_path(resource_name), {class: "btn btn-light btn-m", style:"width: 30%;"} %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
