--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -1,27 +1,32 @@
-<h1> Meios de Pagamento </h1>
+<h2> Meios de Pagamento </h2>
+<hr>
 <% if current_admin %>
-  <%= link_to 'Cadastrar Novo Meio de Pagamento', new_payment_method_url %>
+  <%= link_to 'Cadastrar Novo Meio de Pagamento', new_payment_method_url, class: "btn btn-primary  btn-m" %>
 <% end %>
+<hr>
+<article>
+  <main style="width:80%">
+  <h3> <%= t 'users_list' %> </h3>
 
-<% if @payment_methods.any? %>
-  <table>
-    <thead>
-      <tr>
-        <th> <%=PaymentMethod.human_attribute_name(:name)%> </th>
-        <th> <%=PaymentMethod.human_attribute_name(:payment_type)%> </th>
-        <th> <%=PaymentMethod.human_attribute_name(:status)%> </th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @payment_methods.each do |pm|%>
-      <tr>
-        <td> <%= link_to pm.name, pm  %> </td>
-        <td> <%= pm.payment_type %> </td>
-        <td> <%= I18n.translate(pm.status)%> </td>
-      </tr>
+    <table class="table table-striped table-bordered bg-primary">
+      <thead>
+        <tr>
+          <th scope="col"><%= PaymentMethod.human_attribute_name(:name) %></th>
+          <th scope="col"><%= PaymentMethod.human_attribute_name(:payment_type) %></th>
+          <th scope="col"><%= PaymentMethod.human_attribute_name(:status) %></th>
+  
+        </tr>
+      </thead>
+      <% @payment_methods.each do |pm| %>
+        <tbody>
+            <td><%= link_to pm.name, pm %></td>
+            <td><%= pm.payment_type %></td>
+            <td><%= I18n.translate(pm.status) %></td>
+          </tr>
+        </tbody>
       <% end %>
-    </tbody>
-  </table>
-<% else %>
-  <p>Não existem meios de pagamento cadastrados.</p>
-<% end %>
+    </table>
+
+
+  </main>
+</article>
