--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -12,7 +12,7 @@
             <div class="col-4">
                 <div class="card" style="padding: 3%; width: 26rem; margin-bottom: 5%;">
                 <h3 class="card-title"><%= promo.name %></h3>
-                <p class="card-text btn btn-secondary"><%= link_to promo.voucher, promo_path(promo.id)%><p>
+                <p class="card-text btn btn-gray"><%= link_to promo.voucher, promo_path(promo.id)%><p>
                 </div>
             </div>
         <% end %>
