--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -8,7 +8,7 @@
   <main style="width:80%">
   <h3> <%= t 'users_list' %> </h3>
 
-    <table class="table table-striped table-bordered bg-primary">
+    <table class="table table-striped table-bordered bg-gray">
       <thead>
         <tr>
           <th scope="col"><%= PaymentMethod.human_attribute_name(:name) %></th>
