--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,22 +24,18 @@
                 <li>
                   <%= link_to "Promoções", promos_url , class:"nav-link px-2 link-#{controller_name == 'promos' ? 'primary' : 'dark'}" %>
                 </li>
-                
-                <% if admin_signed_in? %>
                   <li>
-                    <%= link_to "Usuários", users_path, class:"nav-link px-2 link-#{controller_name == 'users' ? 'primary' : 'dark'}" %>
+                    <%= link_to "Usuários", users_path, class:"nav-link px-2 link-#{controller_name == 'users' ? 'primary' : 'dark'}" if admin_signed_in? %>
                   </li> 
                   <li class="nav-link text-dark px-2">
                     <% if user_signed_in? %>
-                      <% if current_user.pending? %>
-                        <%= t 'waiting_for_approval' %>
                       <%= user_greetings(current_user) %>
-                      <% end %>
                     <% end %>
                     <% if admin_signed_in? %>
                       <%= user_greetings(current_admin) %>
                     <% end %>
-                  </li>     
+                  </li> 
+                <% if admin_signed_in? %>    
                   <div class="dropdown text-end">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                       <img src="https://img.freepik.com/premium-vector/person-avatar-design_24877-38130.jpg?w=2000" alt="mdo" width="32" height="32" class="rounded-circle">
