ajustes nas telas de login

--- a/app/views/payment_methods/show.html.erb
+++ b/app/views/payment_methods/show.html.erb
@@ -22,5 +22,5 @@
 
 
 <% if current_admin %>
-  <%= link_to 'Editar', edit_payment_method_url %>
+  <%= link_to 'Editar', edit_payment_method_url, class: "btn btn-primary btn-m" %>
 <% end %>
