--- a/app/views/promos/_form.html.erb
+++ b/app/views/promos/_form.html.erb
@@ -27,5 +27,5 @@
   <%= f.number_field :usages_max, class: "form-control" %>
 </div>
 <div>
-  <%= f.submit 'Salvar' %>
+  <%= f.submit 'Salvar', class: "btn btn-primary  btn-m" %>
 </div>
