--- a/app/views/payment_methods/_form.html.erb
+++ b/app/views/payment_methods/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.file_field :image %>
   </div>
   <div>
-    <%= f.submit 'Salvar' %>
+    <%= f.submit 'Salvar', class: "btn btn-primary  btn-m" %>
   </div>
 <% end %>
