--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
                 <li>
                   <%= link_to "Promoções", promos_url , class:"nav-link px-2 link-#{controller_name == 'promos' ? 'secondary' : 'dark'}" %>
                 </li>
+                <li>
+                  <%= link_to 'Configurar Meios de Pagamento', company_payment_options_url, class:"nav-link px-2 link-#{controller_name == 'company_payment_options' ? 'secondary' : 'dark'}" %>
+                </li>
 
                 <% if admin_signed_in? %>
                   <li>
