--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -7,7 +7,7 @@ $white: #ffffff;
 $theme-colors: (
     "light":      #ffffff,
     "dark":       #000302,
-    "gray":       #F2F3F4,
+    "gray":       #f4f2f4,
     "primary":    #F4D03F,
     "secondary":  #4e3085,
     "info":       #b2aa6e,
