--- a/app/views/payment_methods/_form.html.erb
+++ b/app/views/payment_methods/_form.html.erb
@@ -22,7 +22,7 @@
       <p> <%= image_tag @payment_method.image, style: "width: 200px; display: block" %> </p>
     <% end %>
     <%= f.label :image %>
-    <%= f.file_field :image, class: "form-control", style: "max-width: 30rem"  %>
+    <%= f.file_field :image, class: "form-control", style: "max-width: 30rem; margin-bottom: 1%;"  %>
   </div>
   <div>
     <%= f.submit 'Salvar', class: "btn btn-primary  btn-m" %>
