--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
                 <li>
                   <%= link_to "Promoções", promos_url , class:"nav-link px-2 link-#{controller_name == 'promos' ? 'secondary' : 'dark'}" %>
                 </li>
-
+                <li>
+                  <%= link_to "Cobranças", invoices_url , class:"nav-link px-2 link-#{controller_name == 'invoice' ? 'secondary' : 'dark'}" %>
+                </li>
                 <% if admin_signed_in? %>
                   <li>
                     <%= link_to "Usuários", users_path, class:"nav-link px-2 link-#{controller_name == 'admins' ? 'secondary' : 'dark'}" %>
