--- a/app/views/promos/show.html.erb
+++ b/app/views/promos/show.html.erb
@@ -11,7 +11,6 @@
   <dt><strong><%= Promo.human_attribute_name(:voucher) %>: </strong><%= @promo.voucher %></dt>
   <dt><strong><%= Promo.human_attribute_name(:discount_percentage) %>: </strong><%= @promo.discount_percentage %> %</dt>
   <dt><strong><%= Promo.human_attribute_name(:discount_max) %>: </strong> <%= number_to_currency(@promo.currency, unit: "R$", separator: ",", delimiter: "") %></dt>
-  <dt><strong><%= Promo.human_attribute_name(:product_list) %>: </strong> <%= @promo.product_list %></dt>
 </dl>
 
 <table>
@@ -40,13 +39,27 @@
     }
   ]%>
 
-
+<% begin %>
   <%= form_with model: [@promo, @promo_product] do |product| %>
     <%= product.label :product_id %>
-    <%= product.select :product_id, json_data.map { |p| [p[:product_model], p[:id]]}  %>
-
-    <%= product.submit %>
+    <%= product.select :product_id, ProductsApi.products_array  %>
+    <%= product.submit 'Enviar', class: "btn btn-primary  btn-m"%>
+  <% end %>
+<table class="table table-striped table-bordered bg-gray">
+  <thead>
+    <tr>
+      <th scope="col">Produtos inclusos nesta promoção</th>  
+    </tr>
+  </thead>
+  <% if @promo.promo_products.present? %>
+    <% @promo.promo_products.each do |product| %>
+      <tbody>
+          <td><%= ProductsApi.all.find {|obj| obj.id == product.product_id}.product_model %></td>
+       
+        </tr>
+      </tbody>
+    <% end %>
   <% end %>
 </table>
-
-<%= @promo.promo_products %>
+<% rescue %>
+<% end %>
