--- a/app/views/promos/show.html.erb
+++ b/app/views/promos/show.html.erb
@@ -13,37 +13,20 @@
   <dt><strong><%= Promo.human_attribute_name(:discount_max) %>: </strong> <%= number_to_currency(@promo.currency, unit: "R$", separator: ",", delimiter: "") %></dt>
 </dl>
 
-<table>
-  <% json_data = [
-    {
-      "id":1,
-      "product_model":"TV 32",
-      "launch_year":"2022",
-      "brand":"LG",
-      "price":"5000.0",
-      "status":"active",
-      "product_category_id":1,
-      "created_at":"2022-11-08T19:42:47.921Z",
-      "updated_at":"2022-11-08T19:42:47.921Z"
-    },
-    {
-      "id":2,
-      "product_model":"TV 50",
-      "launch_year":"2021",
-      "brand":"SAMSUNG",
-      "price":"8000.0",
-      "status":"active",
-      "product_category_id":1,
-      "created_at":"2022-11-08T19:43:08.381Z",
-      "updated_at":"2022-11-08T19:43:08.381Z"
-    }
-  ]%>
 
+
+<table>
 <% begin %>
   <%= form_with model: [@promo, @promo_product] do |product| %>
-    <%= product.label :product_id %>
-    <%= product.select :product_id, ProductsApi.products_array  %>
-    <%= product.submit 'Enviar', class: "btn btn-primary  btn-m"%>
+  <% unless @available_products.empty? %>
+  <div id="product_select">
+    <dl>
+      <dt><%= product.label :product_id %>
+      <%= product.select :product_id, @available_products, { class:"form-select" }, prompt: true %>
+      <%= product.submit 'Selecionar Produto', class: "btn btn-primary  btn-m"%></dt>
+    </dl>
+  </div>
+  <% end %>
   <% end %>
 <table class="table table-striped table-bordered bg-gray">
   <thead>
@@ -54,8 +37,10 @@
   <% if @promo.promo_products.present? %>
     <% @promo.promo_products.each do |product| %>
       <tbody>
-          <td><%= ProductsApi.all.find {|obj| obj.id == product.product_id}.product_model %></td>
-       
+          <div id="<%= product.id %>">
+          <td><%= ProductsApi.all.find {|obj| obj.id == product.product_id}.product_model %></td>  
+          <td><%= button_to "Remover", promo_promo_product_path(@promo, product.id), method: :delete, class: "btn btn-primary  btn-m"%></td>     
+          </div>
         </tr>
       </tbody>
     <% end %>
@@ -63,3 +48,5 @@
 </table>
 <% rescue %>
 <% end %>
+
+
