--- a/app/views/company_payment_options/show.html.erb
+++ b/app/views/company_payment_options/show.html.erb
@@ -24,7 +24,7 @@
               </p>
               <p>
                 <li class="list-group-item"> 
-                  <%= CompanyPaymentOption.human_attribute_name(:max_parcels)[:formats][:long] %>: 
+                  <%= CompanyPaymentOption.human_attribute_name(:max_parcels) %>: 
                   <%= @payment_option.max_parcels %>x 
                 </li>
               </p>
