Usuario edita opcao de pagamento da sua seguradora
Co-authored-by: brunabarbozavieira <bruna.barboza111@gmail.com>

--- a/app/views/company_payment_options/edit.html.erb
+++ b/app/views/company_payment_options/edit.html.erb
@@ -1,9 +1,7 @@
 <article>
   <header>
-    <h2> <%= t('messages.new_payment_option') %> </h2>
-    <hr>
+    <h2>  <%= t 'messages.edit_payment_option'%> </h2>
     <%= render 'application/errors', model: @payment_option %>
-    <br>
   </header>
   <main>
     <%= render partial: 'form', locals: {
