--- a/app/views/promos/show.html.erb
+++ b/app/views/promos/show.html.erb
@@ -15,7 +15,7 @@
 
 
 
-<table>
+<table >
 <% begin %>
   <%= form_with model: [@promo, @promo_product] do |product| %>
   <% unless @available_products.empty? %>
@@ -28,7 +28,7 @@
   </div>
   <% end %>
   <% end %>
-<table class="table table-striped table-bordered bg-gray">
+<table class="table table-striped table-bordered bg-gray" style="width: 50%;">
   <thead>
     <tr>
       <th scope="col">Produtos inclusos nesta promoção</th>  
