--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -7,9 +7,7 @@
         <tr>
           <th scope="col"><%= Invoice.human_attribute_name :token %></th>
           <th scope="col"><%= Invoice.human_attribute_name :status %></th>
-          <th scope="col"><%= Invoice.human_attribute_name :insurance_company_id %></th>
           <th scope="col"><%= Invoice.human_attribute_name :package_id %></th>
-          <th scope="col"><%= Invoice.human_attribute_name :registration_number %></th>
         </tr>
       </thead>
       <% @invoices.each do |invoice| %>
@@ -17,9 +15,8 @@
           <tr>
             <td><%= invoice.token %></td>
             <td><%= t(invoice.status) %></td>
-            <td><%= invoice.insurance_company_id %></td>
             <td><%= invoice.package_id %></td>
-            <td><%= invoice.registration_number %></td>
+            <td><%= link_to 'Ver mais', invoice_path(invoice.id), class: 'btn btn-light' %></td>
           </tr>
         </tbody>
       <% end %>
