--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,27 +1,29 @@
 <article>
   <main>
-  <h3> <%= Invoice.human_attribute_name(:invoice) %> </h3>
-  <% if @invoices.any? %>
-    <table class="table table-striped", style="width: 100%">
-      <thead>
-        <tr>
-          <th scope="col"><%= Invoice.human_attribute_name :token %></th>
-          <th scope="col"><%= Invoice.human_attribute_name :status %></th>
-          <th scope="col"><%= Invoice.human_attribute_name :package_id %></th>
-        </tr>
-      </thead>
-      <% @invoices.each do |invoice| %>
-        <tbody>
-          <tr>
-            <td><%= invoice.token %></td>
-            <td><%= t(invoice.status) %></td>
-            <td><%= invoice.package_id %></td>
-            <td><%= link_to 'Ver mais', invoice_path(invoice.id), class: 'btn btn-light' %></td>
-          </tr>
-        </tbody>
+    <div id="attributes">
+      <h3> <%= Invoice.human_attribute_name(:invoice) %> </h3>
+      <% if @invoices.any? %>
+        <table class="table table-striped", style="width: 100%">
+          <thead>
+            <tr>
+              <th scope="col"><%= Invoice.human_attribute_name :token %></th>
+              <th scope="col"><%= Invoice.human_attribute_name :status %></th>
+              <th scope="col"><%= Invoice.human_attribute_name :package_id %></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @invoices.each do |invoice| %>
+              <tr>
+                <td><%= invoice.token %></td>
+                <td><%= t(invoice.status) %></td>
+                <td><%= invoice.package_id %></td>
+                <td><%= link_to 'Ver mais', invoice_path(invoice.id), class: 'btn btn-light' %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
       <% end %>
-    </table>
-  <% end %>
+    </div>  
 
   </main>
 </article>
