--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -4,8 +4,8 @@
     <div class="row g-0">
       <div class="col-md-8">
 
-        <div class="card-body">
-          <ul class="list-group list-group-flush">
+        <div class="card-body" id="attributes">
+          <ul class="list-group list-group-flush" >
             <li class="list-group-item">
               <h5 class="card-title"><%= Invoice.human_attribute_name :status  %>: <%= t( @invoice.status) %></h5>
             </li>
