Alterações no cadastro de opções de pagamento de uma seguradora e respectivos testes

--- a/app/views/company_payment_options/_form.html.erb
+++ b/app/views/company_payment_options/_form.html.erb
@@ -1,9 +1,7 @@
 <%= form_with model: payment_option do |f| %>
   <p class="form-group">
-    <%= f.label :payment_method_id %> &nbsp;
-    <%= f.collection_select :payment_method_id, payment_methods, :id, :payment_name_and_type, class: "form-control", prompt: true %>
+    <%= f.hidden_field :payment_method_id %>
   </p>
-  <br>
   <p class="form-group" style="width: 30%">
     <%= f.label :max_parcels, CompanyPaymentOption.human_attribute_name(:max_parcels) %>
     <%= f.number_field :max_parcels, class: "form-control" %>
