--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
               <% end %>
               <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li>
-                  <%= link_to "Meios de Pagamento", payment_methods_url , class:"nav-link px-2 link-#{controller_name == 'payment_methods' ? 'primary' : 'gray'}" %>
+                  <%= link_to "Meios de Pagamento", payment_methods_url , class:"nav-link px-2 link-#{controller_name == 'payment_methods' ? 'primary' : 'gray'}" if admin_signed_in? %>
                 </li>
                 <li>
                   <%= link_to "Promoções", promos_url , class:"nav-link px-2 link-#{controller_name == 'promos' ? 'primary' : 'gray'}" %>
