--- a/app/views/users/_users_nav.html.erb
+++ b/app/views/users/_users_nav.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-lg-start">
         <%= link_to root_path, class:"d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none link-#{controller_name == 'home' ? 'primary' : 'gray'}" do %>
-          <span class="fs-4"> <%= t 'app_name' %>  </span>
+          <span class="fs-5"> <%= t 'app_name' %>  </span>
         <% end %>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
           <li>
@@ -17,10 +17,8 @@
           </li>
             <%= link_to "Minha Seguradora", company_payment_options_url, class:"nav-link px-2 link-#{controller_name == 'company_payment_options' ? 'primary' : 'gray'}" %>
           </li>
-          <li class="nav-link text-secondary-light px-2">
-            <%= user_greetings(current_user) %>
-          </li> 
         </ul> 
+        <span class="nav-link text-secondary-light px-2", style="margin-right: 3%;"> <%= user_greetings(current_user) %> </span>
         <div class="dropdown text-end">
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/256x256/plain/user.png" alt="mdo" width="32" height="32" class="rounded-circle">
